--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -4609,6 +4609,7 @@ input[type="button"].btn-block {
   flex: 1 1 auto;
   min-height: 1px;
   padding: 1.25rem;
+  background-color: #fff;
 }
 
 .card-title {
